Mongo user-trip

--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 DB_HOST = mongodb+srv://isis3710:LDKFeRfpLkX8QNVE@cluster0.pwnqn.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
 DB_NAME = isis3710
+JSON_TOKEN = isis3710
