--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "nodemon ./bin/www"
   },
   "dependencies": {
     "bcrypt": "^5.0.1",
@@ -12,9 +12,11 @@
     "debug": "~2.6.9",
     "dotenv": "^16.0.0",
     "express": "~4.16.1",
+    "express-generator": "^4.16.1",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.4.1",
     "morgan": "~1.9.1",
+    "nodemon": "^2.0.15",
     "sequelize": "^6.17.0"
   }
 }
