--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 DB_HOST = mongodb+srv://isis3710:LDKFeRfpLkX8QNVE@cluster0.pwnqn.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
 DB_NAME = isis3710
 JSON_TOKEN = isis3710
+GOOGLE_MAPS_TOKEN = AIzaSyC-OO-f54AwAfK3BYbXAX6WRRXGnujPaUo
