--- a/front/package.json
+++ b/front/package.json
@@ -8,9 +8,12 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
+    "bootstrap": "^5.1.3",
     "npm-watch": "^0.11.0",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.3.1",
     "react-dom": "^17.0.2",
+    "react-router": "^6.3.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
     "sass": "^1.50.1",
