--- a/front/package.json
+++ b/front/package.json
@@ -12,6 +12,7 @@
     "npm-watch": "^0.11.0",
     "react": "^17.0.2",
     "react-bootstrap": "^2.3.1",
+    "react-collapsed": "^3.3.0",
     "react-dom": "^17.0.2",
     "react-router": "^6.3.0",
     "react-router-dom": "^6.3.0",
