--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "mongodb": "^4.4.1",
     "morgan": "~1.9.1",
     "nodemon": "^2.0.15",
+    "react": "^18.1.0",
+    "react-dom": "^18.1.0",
     "sequelize": "^6.17.0"
   }
 }
