--- a/front/package.json
+++ b/front/package.json
@@ -19,6 +19,7 @@
     "react-scripts": "5.0.0",
     "reactjs-popup": "^2.0.5",
     "sass": "^1.50.1",
+    "styled-components": "^5.3.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
