--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "nodemon": "^2.0.15",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-icons": "^4.4.0",
     "react-intl": "^6.0.3",
+    "react-pro-sidebar": "^0.7.1",
     "sequelize": "^6.17.0"
   },
   "devDependencies": {
