Auto stash before merge of "master" and "origin/master"

--- a/.env
+++ b/.env
@@ -2,3 +2,6 @@ DB_HOST = mongodb+srv://isis3710:LDKFeRfpLkX8QNVE@cluster0.pwnqn.mongodb.net/myF
 DB_NAME = isis3710
 JSON_TOKEN = isis3710
 GOOGLE_MAPS_TOKEN = AIzaSyC-OO-f54AwAfK3BYbXAX6WRRXGnujPaUo
+REACT_APP_AUTH0_DOMAIN = dev-a91vj0h7.us.auth0.com
+REACT_APP_AUTH0_CLIENTID = tcSc1WsfL4WTCwY5ISlphL9Y4jnv8tUy
+REACT_APP_AUTH0_AUDIENCE = https://dev-a91vj0h7.us.auth0.com/api/v2/
