--- a/front/public/manifest.json
+++ b/front/public/manifest.json
@@ -8,7 +8,7 @@
       "type": "image/x-icon"
     },
     {
-      "src": "logo.png",
+      "src": "logo192.png",
       "type": "image/x-icon",
       "sizes": "192x192"
     },
