--- a/front/public/manifest.json
+++ b/front/public/manifest.json
@@ -16,6 +16,10 @@
       "src": "logo.png",
       "type": "image/x-icon",
       "sizes": "512x512"
+    },
+    {
+      "src": "logo.svg",
+      "purpose": "any maskable"
     }
   ],
   "start_url": ".",
